# esp32-wifi-manager

./: CMakeLists.txt  Kconfig
examples/default_demo/main/: user_main.c
examples/http_hook/main/: user_main.c
src/: dns_server.c  dns_server.h  http_app.c  json.c  nvs_sync.c  nvs_sync.h  wifi_manager.c  wifi_manager.h
